namespace UITManagerApi.Models {
    public class User {
        public string Name { get; set; }
        public string Serial { get; set; }
    }
}